log
Thu 07 Sep 2023 05:29:06 PM UTC: 
 tests:  0|6
total_score: 0/70
e089429
Thu 07 Sep 2023 05:34:50 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:12: error: unused variable ‘map’ [-Werror=unused-variable]
   55 |   HashMap* map = (HashMap*)malloc(sizeof(HashMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
674ed49
Thu 07 Sep 2023 05:37:59 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5670af6
Thu 07 Sep 2023 05:39:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e7a2304
Thu 07 Sep 2023 06:04:03 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: too few arguments to function ‘hash’
   43 |   long i = hash(key)%map->capacity;
      |            ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:48:15: error: array subscript is not an integer
   48 |   map->buckets[index] = newPair;
      |               ^
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key)%map->capacity;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
0a8885f
Thu 07 Sep 2023 06:04:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: too few arguments to function ‘hash’
   43 |   long i = hash(key)%map->capacity;
      |            ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
f7d0281
Thu 07 Sep 2023 06:07:19 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   48 |   map->buckets = newPair;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
4a14840
Thu 07 Sep 2023 06:08:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
981301e
Thu 07 Sep 2023 06:08:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a95f3a2
Thu 07 Sep 2023 06:09:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:15: error: array subscript is not an integer
   48 |   map->buckets[key] = newPair;
      |               ^
Compilation failed
3f4580b
Thu 07 Sep 2023 06:11:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9ed5629
Thu 07 Sep 2023 06:26:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
60197ab
Thu 07 Sep 2023 06:30:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:16: error: implicit declaration of function ‘next’ [-Werror=implicit-function-declaration]
   48 |   map->buckets[next(i)] = newPair;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
5a5111d
Thu 07 Sep 2023 06:31:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
2167e12
Thu 07 Sep 2023 06:58:47 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
2109db5
Thu 07 Sep 2023 07:00:20 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
abe81a2
Thu 07 Sep 2023 07:11:57 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f131ab9
Thu 07 Sep 2023 07:12:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
95c6f4d
Thu 07 Sep 2023 07:13:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c5be713
Thu 07 Sep 2023 07:13:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
22c6d30
Thu 07 Sep 2023 07:16:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bcd8696
Thu 07 Sep 2023 07:16:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5ae3835
Thu 07 Sep 2023 07:21:17 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  5|4
total_score: 30/70
6a6b9e1
